--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "rakudo-2010.12.tar.gz:"	868dd3345f2397e7a37883b46245635d9f55ea3a
+  rakudo-2024.06.tar.gz: 410e0889fd39bcd947d0e9d2ada38e58a66e3f61
